# plan_doctor

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/adapters/repositories/: firebase_chat_repo.py  firebase_chunk_repo.py  firebase_document_repo.py  firebase_message_repo.py
src/adapters/services/chunking/: tokenizer_chunker.py
src/adapters/services/embedding/: sentence_transformer_adapter.py
src/adapters/services/generation/: cohere_adapter.py  groq_adapter.py
src/adapters/services/summarization/: __init__.py  huggingface_summarizer.py
src/adapters/services/vector_store/: qdrant_adapter.py
src/adapters/storage/: local_file_storage.py
src/api/: dependencies.py  lifespan.py
src/api/routers/: chat.py  delete.py  processing.py  upload.py
src/api/schemas/: __init__.py  chat_schemas.py  delete_schemas.py  processing_schemas.py  upload_schemas.py
src/core/domain/entities/: __init__.py  chat.py  chunk.py  document.py  message.py
src/core/domain/value_objects/: __init__.py  chat_response.py  file_upload_result.py  raw_document_chunk.py  retrieved_document.py  search_query.py  summarization_result.py
src/core/ports/messaging/: i_message_publisher.py
src/core/ports/repositories/: __init__.py  i_chat_repository.py  i_chunk_repository.py  i_document_repository.py  i_message_repository.py
src/core/ports/services/: __init__.py  i_document_chunker.py  i_embedding_service.py  i_generation_service.py  i_summarization_service.py  i_vector_store.py
src/core/ports/storage/: i_file_storage.py
src/core/use_cases/: chat_conversation.py  chat_summarization.py  document_delete.py  document_processing.py  document_upload.py
src/infrastructure/: config.py  container.py  firebase_client.py  logging_setup.py  prompt_builder.py
src/infrastructure/templates/ar/: rag_document_context.j2  rag_system_prompt.j2  rag_user_query.j2
src/infrastructure/templates/en/: rag_document_context.j2  rag_system_prompt.j2  rag_user_query.j2
