[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-doctor-rag"
version = "1.0.0"
description = "RAG backend for PlantDoctor mobile app — plant disease Q&A."
requires-python = ">=3.11"

dependencies = [
    # ── Web Framework ─────────────────────────────────────────────────────
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",       # UploadFile support

    # ── Config & Validation ───────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # ── Firebase (replaces MongoDB/Motor) ─────────────────────────────────
    # firebase-admin: Authentication + Firestore Admin SDK
    # google-cloud-firestore: Async Firestore client
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.16.0",

    # ── Vector Database ───────────────────────────────────────────────────
    "qdrant-client>=1.9.0",

    # ── ML: Embedding ─────────────────────────────────────────────────────
    "sentence-transformers>=3.0.0",

    # ── ML: Summarization (HuggingFace BART) ─────────────────────────────
    # transformers: pipeline("summarization") + AutoTokenizer for chunking
    # torch: backend for both embedding and summarization models
    "transformers>=4.40.0",
    "torch>=2.2.0",

    # ── LLM Generation ────────────────────────────────────────────────────
    "openai>=1.30.0",                # Groq uses OpenAI-compatible API
    "cohere>=5.5.0",

    # ── Document Loading & Chunking ───────────────────────────────────────
    "langchain-community>=0.2.0",
    "langchain-docling>=0.1.0",      # PDF loading via Docling
    "langchain-text-splitters>=0.2.0",

    # ── Prompt Templating ─────────────────────────────────────────────────
    "jinja2>=3.1.0",

    # ── Async File I/O ────────────────────────────────────────────────────
    "aiofiles>=23.2.0",

    # ── Structured Logging ────────────────────────────────────────────────
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
